force-app/main/default/objects/Flight_2__c/Flight_2__c.object-meta.xml
<CustomObject>
    <label>Flight 2</label>
    <nameField>
        <displayFormat>FID-{000}</displayFormat>
        <label>Flight ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flights 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>