force-app/main/default/objects/Flight_2__c/fields/Airplane_ID__c.field-meta.xml
<CustomField>
    <fullName>Airplane_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airplane ID</label>
    <referenceTo>Airplane_2__c</referenceTo>
    <relationshipLabel>Flights 2</relationshipLabel>
    <relationshipName>Flights_2</relationshipName>
    <type>Lookup</type>
</CustomField>