force-app/main/default/objects/Flight_2__c/fields/Runway__c.field-meta.xml
<CustomField>
    <fullName>Runway__c</fullName>
    <label>Runway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Runway</fullName>
            </value>
            <value>
                <fullName>Long Runway</fullName>
            </value>
            <value>
                <fullName>Medium Runway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>