force-app/main/default/objects/Flight_2__c/fields/Time_Demo__c.field-meta.xml
<CustomField>
    <fullName>Time_Demo__c</fullName>
    <formula>VALUE(LEFT(LEFT(TEXT( Departure_Time__c ),4),2))*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Demo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>