force-app/main/default/objects/Flight_2__c/fields/Type_of_arplane__c.field-meta.xml
<CustomField>
    <fullName>Type_of_arplane__c</fullName>
    <formula>Airplane_ID__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of airplane</label>
    <type>Text</type>
</CustomField>