force-app/main/default/objects/Flight_2__c/validationRules/Arrival_date_cant_be_earlier.validationRule-meta.xml
<ValidationRule>
    <fullName>Arrival_date_cant_be_earlier</fullName>
    <active>true</active>
    <errorConditionFormula>Arrival_Date__c  &lt;  Departure_Date__c</errorConditionFormula>
    <errorDisplayField>Arrival_Date__c</errorDisplayField>
    <errorMessage>Arrival date can&apos;t be earlier than departure date.</errorMessage>
</ValidationRule>