force-app/main/default/objects/Flight_2__c/validationRules/Arrival_time_cant_be_earlier.validationRule-meta.xml
<ValidationRule>
    <fullName>Arrival_time_cant_be_earlier</fullName>
    <active>true</active>
    <errorConditionFormula>Arrival_Time__c  &lt;  Departure_Time__c</errorConditionFormula>
    <errorDisplayField>Arrival_Time__c</errorDisplayField>
    <errorMessage>Arrival time can&apos;t be earlier than departure time.</errorMessage>
</ValidationRule>