force-app/main/default/objects/Flight_2__c/listViews/Flight_Departure_Today.listView-meta.xml
<ListView>
    <fullName>Flight_Departure_Today</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Departure_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Flight Departure Today</label>
</ListView>